# icvote

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/icvote_backend/: Cargo.toml  icvote_backend.did
src/icvote_backend/src/: lib.rs
src/icvote_frontend/: index.html  package.json  tsconfig.json  vite.config.js
src/icvote_frontend/src/: App.jsx  App.tsx  Vote.tsx  index.scss  main.tsx
src/icvote_frontend/src/components/icons/: Plus.tsx  Wallet.tsx  Warning.tsx
src/icvote_frontend/src/components/layout/footer/: Footer.tsx  footer.module.css
src/icvote_frontend/src/components/layout/header/: Nav.tsx  header.module.css
src/icvote_frontend/src/components/partial/: AuthModal.tsx  Intro.tsx  WalletStatus.tsx  partial.module.css
src/icvote_frontend/src/components/proposals/: ProposalForm.tsx  ProposalList.tsx  proposals.module.css
