[package]
name = "icvote_backend"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
chrono = "0.4.41"
ic-cdk = "0.18"
ic-cdk-macros = "0.18"
ic-cdk-timers = "0.12" # Feel free to remove this dependency if you don't need timers
serde = { version = "1.0", features = ["derive"] }
